Formatting. license header